--- a/LookingForGroup/src/main/res/layout/activity_login.xml
+++ b/LookingForGroup/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hu.blog.megosztanam.LoginActivity">
+    tools:context="hu.blog.megosztanam.login.LoginActivity">
 
     <!-- Login progress -->
     <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
