--- a/LookingForGroup/src/main/res/layout/activity_login.xml
+++ b/LookingForGroup/src/main/res/layout/activity_login.xml
@@ -24,14 +24,26 @@
                 android:textAlignment="center" />
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="SummonerName"
-                android:ems="10"
-                android:id="@+id/summonerName"
-                android:maxLines="1"
-                android:textAlignment="center" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/summonerName"
+                    android:maxLines="1"
+                    android:textAlignment="center" android:hint="@string/summoner_name"/>
+            <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/region_group"
+                    android:checkedButton="@+id/radio_button_euw">
+                <RadioButton
+                        android:text="EUW"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/radio_button_euw" android:layout_weight="1"/>
+                <RadioButton
+                        android:text="EUNE"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" android:id="@+id/radio_button_eune"/>
+            </RadioGroup>
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/sign_in_button"
