--- a/LookingForGroup/src/main/res/layout/user_profile.xml
+++ b/LookingForGroup/src/main/res/layout/user_profile.xml
@@ -30,4 +30,16 @@
             android:layout_height="wrap_content" android:layout_alignTop="@+id/profile_picture"
             android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
             android:layout_marginRight="14dp" android:layout_marginEnd="14dp" android:id="@+id/summoner_level"/>
+    <TextView
+            android:text="No server"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/server" android:layout_below="@+id/summoner_level" android:layout_alignLeft="@+id/username"
+            android:layout_alignStart="@+id/username"/>
+    <Button
+            android:text="Logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/summoner_level" android:layout_alignEnd="@+id/summoner_level"
+            android:layout_marginBottom="14dp" android:id="@+id/logou_button"/>
 </RelativeLayout>
