--- a/LookingForGroup/src/main/res/layout/activity_login.xml
+++ b/LookingForGroup/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:gravity="center_horizontal"
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -8,53 +8,79 @@
     tools:context="hu.blog.megosztanam.login.LoginActivity">
 
     <!-- Login progress -->
-    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:text="@string/signed_out"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" android:padding="5dp"
+            android:layout_marginBottom="30dp"/>
+    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
+                  android:layout_height="wrap_content" android:orientation="vertical">
 
-        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/status"
+        <EditText
                 android:layout_width="match_parent"
-                android:text="@string/signed_out"
-                android:textColor="@android:color/black"
-                android:textSize="24sp"
                 android:layout_height="wrap_content"
-                android:textAlignment="center" />
-
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/summonerName"
-                    android:maxLines="1"
-                    android:textAlignment="center" android:hint="@string/summoner_name"/>
-            <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:id="@+id/region_group"
-                    android:checkedButton="@+id/radio_button_euw">
-                <RadioButton
-                        android:text="EUW"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/radio_button_euw" android:layout_weight="1"/>
-                <RadioButton
-                        android:text="EUNE"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/radio_button_eune"/>
-            </RadioGroup>
-
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/sign_in_button"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/summonerName"
+                android:maxLines="1"
+                android:textAlignment="center" android:hint="@string/summoner_name"/>
+        <RadioGroup
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="wrap_content" android:id="@+id/region_group"
+                android:checkedButton="@+id/radio_button_euw">
+            <RadioButton
+                    android:text="EUW"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/radio_button_euw" android:layout_weight="1"
+            />
+            <RadioButton
+                    android:text="EUNE"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/radio_button_eune"/>
+        </RadioGroup>
 
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@mipmap/role_bot"
+                    android:id="@+id/summoner_icon" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/lvl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/lvl_label" android:layout_weight="1"
+                    android:textAlignment="textEnd" android:textSize="24sp" android:paddingTop="10dp" android:layout_gravity="end"
+                    android:paddingRight="3dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/summoner_level" android:layout_weight="1"
+                    android:textSize="24sp" android:textAlignment="viewStart" android:layout_gravity="start"
+                    android:paddingTop="10dp"/>
         </LinearLayout>
-    </ScrollView>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <Button
+                    android:text="Search summoner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button_search_new" android:layout_weight="1"/>
+            <Button
+                    android:text="Accept"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/button_accept_summoner" android:layout_weight="1"/>
+        </LinearLayout>
 
-    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp" android:visibility="gone" />
+    </LinearLayout>
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_margin="5dp" android:padding="5dp"/>
 
 </LinearLayout>
