--- a/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
+++ b/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- fragment_screen_slide_page.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/content"
+              xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
     <LinearLayout
+            android:background="@color/colorPrimary"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -15,15 +16,35 @@
                 android:layout_height="wrap_content">
             <Button
                     android:text="@string/new_post"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/new_post" android:layout_weight="1"/>
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:id="@+id/new_post" android:layout_weight="1"/>
         </LinearLayout>
-        <ListView android:id="@+id/looking_for_members_list_view"
-                  style="?android:textAppearanceMedium"
-                  android:padding="0dp"
-                  android:fillViewport="true"
-                  android:lineSpacingMultiplier="1.2"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"/>
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <Button
+                    android:text="New posts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/load_new_posts"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_marginBottom="10dp"
+                    android:typeface="normal"
+                    android:textSize="12sp" android:visibility="gone"/>
+
+            <ListView android:id="@+id/looking_for_members_list_view"
+                      style="?android:textAppearanceMedium"
+                      android:padding="0dp"
+                      android:fillViewport="true"
+                      android:lineSpacingMultiplier="1.2"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+                      android:layout_alignParentStart="true" android:background="@color/colorPrimary"/>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
