--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:id="@+id/row_item_layout" android:background="@color/colorPrimaryDark">
+              android:id="@+id/row_item_layout">
 
     <TableLayout android:id="@+id/looking_for_members_table"
             android:layout_width="match_parent"
@@ -152,8 +152,7 @@
         <TextView
                 android:text="@string/description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:textStyle="normal|bold"
-                android:fontFamily="sans-serif-smallcaps"/>
+                android:layout_height="wrap_content" android:textStyle="normal|bold"/>
         <TextView android:id="@+id/description"
                   android:text="@string/description_placeholder"
                   android:layout_width="match_parent"
