--- a/LookingForGroup/src/main/res/layout/user_profile.xml
+++ b/LookingForGroup/src/main/res/layout/user_profile.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
               android:layout_height="match_parent" android:orientation="vertical"
-            android:id="@+id/user_profile">
+                android:background="@color/colorPrimary"
+
+                android:id="@+id/user_profile">
 
     <ImageView
             android:layout_width="150dp"
@@ -18,13 +20,6 @@
             android:layout_alignBottom="@+id/profile_picture" android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" android:layout_marginRight="47dp" android:layout_marginEnd="47dp"/>
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:text="@string/no_username"
-            android:layout_above="@+id/summoner_name" android:layout_alignLeft="@+id/summoner_name"
-            android:layout_alignStart="@+id/summoner_name" android:layout_marginBottom="36dp"/>
-    <TextView
             android:text="@string/lvl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_alignTop="@+id/profile_picture"
@@ -38,8 +33,16 @@
             android:layout_alignStart="@+id/username"/>
     <Button
             android:text="Logout"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/summoner_level" android:layout_alignEnd="@+id/summoner_level"
             android:layout_marginBottom="14dp" android:id="@+id/logou_button"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/username"
+            android:text="@string/no_username"
+            android:layout_below="@+id/server" android:layout_alignLeft="@+id/summoner_name"
+            android:layout_alignStart="@+id/summoner_name" android:layout_marginTop="15dp"/>
 </RelativeLayout>
