--- a/LookingForGroup/src/main/res/values/colors.xml
+++ b/LookingForGroup/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#366cec</color>
+    <color name="colorPrimaryDark">#3e54e6</color>
+    <color name="colorAccent">#056851</color>
+    <color name="reload_button_color">#4c79ed</color>
+    <color name="post_color">#3f6ee7</color>
+    <color name="post_color_light">#3f6ee7</color>
+    <color name="post_color_dark">#2654ca</color>
+
+
 </resources>
