--- a/LookingForGroup/src/main/res/layout/user_profile.xml
+++ b/LookingForGroup/src/main/res/layout/user_profile.xml
@@ -6,43 +6,51 @@
 
                 android:id="@+id/user_profile">
 
-    <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp" app:srcCompat="@color/colorAccent"
-            android:layout_marginLeft="14dp" android:layout_marginStart="14dp" android:layout_marginTop="15dp"
-            android:id="@+id/profile_picture" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
-    <TextView
-            android:text="@string/summoner_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="33dp" android:id="@+id/summoner_name"
-            android:layout_alignBottom="@+id/profile_picture" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginRight="47dp" android:layout_marginEnd="47dp"/>
-    <TextView
-            android:text="@string/lvl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_alignTop="@+id/profile_picture"
-            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
-            android:layout_marginRight="14dp" android:layout_marginEnd="14dp" android:id="@+id/summoner_level"/>
-    <TextView
-            android:text="No server"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/server" android:layout_below="@+id/summoner_level" android:layout_alignLeft="@+id/username"
-            android:layout_alignStart="@+id/username"/>
     <Button
             android:text="Logout"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/summoner_level" android:layout_alignEnd="@+id/summoner_level"
-            android:layout_marginBottom="14dp" android:id="@+id/logou_button"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/logou_button"
+            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+    <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp" app:srcCompat="@color/colorAccent"
+            android:id="@+id/profile_summoner_icon"
+            android:layout_below="@+id/profile_picture" android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" android:layout_marginRight="23dp" android:layout_marginEnd="23dp"/>
+    <TextView
+            android:text="@string/summoner_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/summoner_name"
+            android:layout_below="@+id/server" android:layout_centerHorizontal="true" android:layout_marginTop="13dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="23dp" android:id="@+id/profile_lvl" android:layout_alignBottom="@+id/profile_summoner_icon"
+            android:layout_alignRight="@+id/summoner_name" android:layout_alignEnd="@+id/summoner_name"/>
+    <TextView
+            android:text="No server"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/server"
+            android:layout_alignTop="@+id/profile_summoner_icon" android:layout_alignRight="@+id/summoner_name"
+            android:layout_alignEnd="@+id/summoner_name"/>
+    <ImageView
+            app:srcCompat="@color/colorAccent"
+            android:id="@+id/profile_picture"
+            android:layout_width="100dp" android:layout_height="100dp"
+            android:layout_below="@+id/username" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" android:layout_marginLeft="14dp" android:layout_marginStart="14dp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username"
             android:text="@string/no_username"
-            android:layout_below="@+id/server" android:layout_alignLeft="@+id/summoner_name"
-            android:layout_alignStart="@+id/summoner_name" android:layout_marginTop="15dp"/>
+            android:layout_marginTop="24dp"
+            android:layout_alignParentTop="true" android:layout_alignLeft="@+id/profile_picture"
+            android:layout_alignStart="@+id/profile_picture"/>
 </RelativeLayout>
