--- a/LookingForGroup/src/main/res/layout/activity_main.xml
+++ b/LookingForGroup/src/main/res/layout/activity_main.xml
@@ -14,14 +14,12 @@
   limitations under the License.
 
 
-
+RecyclerView
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-              android:background="@color/colorPrimary"
-
               android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -56,14 +54,12 @@
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
-        style="@style/ButtonBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/prev_button"
-            style="@style/ButtonBarButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -77,7 +73,6 @@
 
         <Button
             android:id="@+id/next_button"
-            style="@style/ButtonBarButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
