--- a/LookingForGroup/src/main/res/values/colors.xml
+++ b/LookingForGroup/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorAccent">#056851</color>
     <color name="reload_button_color">#4c79ed</color>
     <color name="post_color">#3f6ee7</color>
-    <color name="post_color_light">#3f6ee7</color>
+    <color name="post_color_light">#9cb0e2</color>
     <color name="post_color_dark">#2654ca</color>
 
 
