--- a/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
+++ b/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- fragment_screen_slide_page.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
@@ -36,15 +36,16 @@
                     android:textSize="12sp" android:visibility="gone"/>
 
             <ListView android:id="@+id/looking_for_members_list_view"
-                      style="?android:textAppearanceMedium"
-                      android:padding="5dp"
+                      style="@style/Widget.AppCompat.ListView"
                       android:fillViewport="true"
-                      android:lineSpacingMultiplier="1.2"
+                      android:divider="@android:color/transparent"
+                      android:dividerHeight="10.0sp"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
                       android:layout_alignParentStart="true" android:paddingLeft="0dp" android:paddingRight="0dp"
-                      android:layout_marginLeft="0dp" android:layout_marginRight="0dp"/>
+                      android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_margin="0dp"
+                      android:padding="5dp"/>
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
