--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -8,7 +8,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="10dp"
-        android:id="@+id/row_item_layout" android:layout_margin="10dp">
+        android:id="@+id/row_item_layout" android:layout_margin="10dp"
+>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
@@ -17,25 +18,62 @@
                   android:id="@+id/item_layout">
 
 
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    card_view:srcCompat="@drawable/twisted_treeline_map_small"
+                    android:id="@+id/map_icon" android:scaleType="centerCrop" android:layout_height="65dp"
+                    android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" android:adjustViewBounds="false"
+                    android:cropToPadding="false"/>
+            <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="0dp"
+
+                    android:layout_alignLeft="@id/map_icon"
+                    android:layout_alignEnd="@id/map_icon"
+                    android:layout_alignTop="@id/map_icon"
+                    android:layout_alignRight="@id/map_icon"
+                    android:layout_alignStart="@id/map_icon"
+                    android:layout_alignBottom="@id/map_icon" android:layout_alignParentTop="false"
+                    android:layout_height="wrap_content">
+
+                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:id="@+id/post_type" android:layout_margin="2dp"
+                            android:layout_weight=".2" android:layout_height="30dp"/>
+                </TableRow>
+                <TableRow android:layout_width="match_parent" android:id="@+id/map_row"
+                          android:layout_height="match_parent"
+                          android:padding="5dp"
+                          android:layout_margin="0dp" android:background="#6affffff">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:text="@string/map_name"
+                            android:id="@+id/map_name" android:layout_margin="2dp"
+                            android:layout_weight=".5" android:fontFamily="sans-serif" android:textStyle="normal|bold"
+                            android:textSize="14sp"/>
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent" android:id="@+id/ranked"
+                            android:layout_weight=".3" android:textStyle="normal|bold" android:textAlignment="center"/>
+
+                </TableRow>
+            </TableLayout>
+        </RelativeLayout>
         <TableLayout android:id="@+id/looking_for_members_table"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:stretchColumns="*">
 
-            <TableRow android:layout_height="match_parent"
-                      android:padding="5dp"
-                      android:layout_margin="5dp">
-                <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/post_type" android:layout_margin="2dp"
-                        android:layout_weight=".2"/>
-            </TableRow>
-
             <TableRow android:layout_width="match_parent" android:id="@+id/owner_row"
                       android:layout_height="match_parent"
                       android:padding="5dp"
-                      android:layout_margin="5dp">
+            >
                 <TextView
                         android:text="@string/owner"
                         android:layout_width="0dp"
@@ -60,30 +98,10 @@
                         android:layout_height="match_parent"
                         android:textStyle="normal|bold|italic"/>
             </TableRow>
-            <TableRow android:layout_width="0dp" android:id="@+id/map_row"
-                      android:layout_height="match_parent"
-                      android:padding="5dp"
-                      android:layout_margin="5dp">
-                <TextView
-                        android:text="@string/map"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/map_label" android:layout_margin="2dp"
-                        android:layout_weight=".2" android:textStyle="normal|bold"/>
-                <TextView
-                        android:layout_width="0dp"
-                        android:text="@string/map_name"
-                        android:id="@+id/map_name" android:layout_margin="2dp"
-                        android:layout_weight=".5"/>
-                <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent" android:id="@+id/ranked"
-                        android:layout_weight=".3"/>
 
-            </TableRow>
             <TableRow android:layout_width="match_parent" android:id="@+id/positions_row"
                       android:layout_height="match_parent"
-                      android:layout_margin="5dp" android:padding="5dp"
+                      android:layout_margin="0dp" android:padding="5dp"
                       android:fadeScrollbars="false">
                 <TextView
                         android:layout_weight="3"
@@ -134,7 +152,7 @@
             <TableRow android:layout_width="0dp" android:id="@+id/rank_row"
                       android:layout_height="match_parent"
                       android:padding="5dp"
-                      android:layout_margin="5dp">
+                      android:layout_margin="0dp">
                 <TextView
                         android:text="@string/required_rank"
                         android:layout_width="0dp"
