--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -44,8 +44,9 @@
                 <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                     <TextView
                             android:layout_width="0dp"
-                            android:id="@+id/post_type" android:layout_margin="2dp"
-                            android:layout_weight=".2" android:layout_height="30dp"/>
+                            android:layout_margin="2dp"
+                            android:layout_weight=".2" android:layout_height="30dp" android:textAlignment="viewEnd"
+                            android:id="@+id/placeholder"/>
                 </TableRow>
                 <TableRow android:layout_width="match_parent" android:id="@+id/map_row"
                           android:layout_height="match_parent"
@@ -188,6 +189,12 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" android:paddingBottom="5dp" android:paddingTop="5dp"
                       android:textStyle="normal|italic"/>
+            <TextView
+                    android:text="2017.03.23 20:14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/post_date" android:textAlignment="textEnd"
+                    android:textStyle="normal|italic" android:fontFamily="sans-serif" android:typeface="sans"
+                    android:textSize="10sp" android:textAllCaps="false"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
