--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -15,7 +15,7 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:id="@+id/item_layout">
+                  android:id="@+id/item_layout" android:elevation="0dp" android:alpha="1">
 
 
         <RelativeLayout
@@ -190,11 +190,18 @@
                       android:layout_height="wrap_content" android:paddingBottom="5dp" android:paddingTop="5dp"
                       android:textStyle="normal|italic"/>
             <TextView
-                    android:text="2017.03.23 20:14"
+                    android:text="@string/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/post_date" android:textAlignment="textEnd"
+                    android:layout_gravity="end"
                     android:textStyle="normal|italic" android:fontFamily="sans-serif" android:typeface="sans"
-                    android:textSize="10sp" android:textAllCaps="false"/>
+                    android:textSize="12sp" android:textAllCaps="false"/>
         </LinearLayout>
     </LinearLayout>
+    <TextView
+            android:text="@string/already_applied"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/already_applied" android:textSize="20sp"
+            android:textStyle="normal|bold" android:visibility="gone"/>
 </android.support.v7.widget.CardView>
