replace list view with recycle view for looks and performance

--- a/LookingForGroup/src/main/res/layout/applications_card.xml
+++ b/LookingForGroup/src/main/res/layout/applications_card.xml
@@ -8,8 +8,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="10dp"
-        android:id="@+id/row_item_layout" android:layout_margin="10dp"
->
+        android:id="@+id/row_item_layout"
+        android:layout_margin="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
