--- a/LookingForGroup/src/main/res/layout/activity_main.xml
+++ b/LookingForGroup/src/main/res/layout/activity_main.xml
@@ -18,16 +18,9 @@ RecyclerView
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/action_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize" />
 
     <com.tech.freak.wizardpager.ui.StepPagerStrip
         android:id="@+id/strip"
@@ -35,7 +28,7 @@ RecyclerView
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:gravity="left"
+        android:gravity="start"
         android:paddingBottom="8dp"
         android:paddingLeft="@dimen/list_item_padding_left"
         android:paddingRight="@dimen/list_item_padding_right"
