--- a/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
+++ b/LookingForGroup/src/main/res/layout/fragment_slide_screen.xml
@@ -8,7 +8,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:background="@color/colorPrimaryLight">
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -43,18 +43,18 @@
                     android:typeface="normal"
                     android:textSize="12sp" android:visibility="gone"/>
 
-            <ListView android:id="@+id/looking_for_members_list_view"
+            <android.support.v7.widget.RecyclerView android:id="@+id/looking_for_members_list_view"
                       style="@style/Widget.AppCompat.ListView"
                       android:fillViewport="true"
                       android:divider="@android:color/transparent"
-                      android:dividerHeight="10.0sp"
+                      android:dividerHeight="10.0dp"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:paddingLeft="0dp" android:paddingRight="0dp"
-                      android:padding="5dp" android:layout_alignParentTop="true"
-                      android:layout_toRightOf="@+id/load_new_posts" android:layout_toEndOf="@+id/load_new_posts">
+                      android:layout_alignParentTop="true"
+                      android:layout_toRightOf="@+id/load_new_posts" android:layout_toEndOf="@+id/load_new_posts"
+            >
 
-            </ListView>
+            </android.support.v7.widget.RecyclerView>
             <android.support.design.widget.FloatingActionButton
                     android:src="@drawable/ic_add"
                     android:layout_width="wrap_content"
