--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -2,14 +2,14 @@
 
 <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
         xmlns:android="http://schemas.android.com/apk/res/android"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="10dp"
-        android:id="@+id/row_item_layout" android:layout_margin="10dp"
->
+        android:id="@+id/row_item_layout"
+        android:layout_margin="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
