--- a/LookingForGroup/src/main/res/layout/activity_screen_slide.xml
+++ b/LookingForGroup/src/main/res/layout/activity_screen_slide.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- activity_screen_slide.xml -->
-<android.support.v4.view.ViewPager
+<androidx.viewpager.widget.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
         android:layout_width="match_parent"
