--- a/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
+++ b/LookingForGroup/src/main/res/layout/looking_for_member_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -204,4 +204,4 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/already_applied" android:textSize="20sp"
             android:textStyle="normal|bold" android:visibility="gone"/>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
